--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         h1 {
             text-align: center;
             margin-top: 50px;
+            color: #333;
         }
 
         input[type="text"] {
@@ -35,6 +36,9 @@
             border-radius: 5px;
             font-size: 16px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
+            display: block;
+            margin: 0 auto; /* Added this line to center the button */
         }
 
         button:hover {
@@ -49,6 +53,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 16px;
+            color: #333;
         }
     </style>
 </head>
